--- a/admin/app/views/spree/admin/zones/index.html.erb
+++ b/admin/app/views/spree/admin/zones/index.html.erb
@@ -1,19 +1,14 @@
-<%= content_for(:title) do %>
-  Markets
-<% end %>
-
-
 <%= content_for(:page_title) do %>
-  Markets
+  <%= Spree.t(:zones) %>
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:new_market), new_object_url, class: "btn-primary", icon: 'plus', id: 'admin_new_zone_link' %>
+  <%= button_link_to Spree.t(:new_zone), new_object_url, class: "btn-primary", icon: 'plus' %>
 <% end if can? :create, Spree::Zone %>
 
 <% content_for :page_alerts do %>
   <div class="alert alert-info">
-    Markets are geographical groupings, they represent collections of either states or countries.
+    Zones are geographical groupings, they represent collections of either states or countries.
   </div>
 <% end %>
 
@@ -33,10 +28,10 @@
       <tbody>
         <% @zones.each do |zone| %>
           <tr id="<%= spree_dom_id zone %>" class="cursor-pointer" data-controller="row-link">
-            <td data-action="click->row-link#openLink"><%= zone.name %></td>
-            <td data-action="click->row-link#openLink"><%= zone.description %></td>
-            <td data-action="click->row-link#openLink"><%= active_badge(zone.default_tax?) %></td>
-            <td class="actions">
+            <td class="w-25" data-action="click->row-link#openLink"><%= zone.name %></td>
+            <td class="w-40 text-muted text-wrap" data-action="click->row-link#openLink"><%= zone.description %></td>
+            <td class="w-10" data-action="click->row-link#openLink"><%= active_badge(zone.default_tax?) %></td>
+            <td class="w-10 actions">
               <%= link_to_edit(zone, data: { row_link_target: :link }) if can? :edit, zone %>
             </td>
           </tr>
