Admin UX small fixes

--- a/admin/app/views/spree/admin/stock_locations/_stock_location.html.erb
+++ b/admin/app/views/spree/admin/stock_locations/_stock_location.html.erb
@@ -12,7 +12,7 @@
         <div><%= link_to_edit stock_location, data: { row_link_target: 'link' } %></div>
 
         <div class="dropdown">
-          <button class="btn btn-sm btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button class="btn btn-sm btn-light h-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= icon('dots', class: 'mr-0') %>
           </button>
 
