--- a/admin/app/views/spree/admin/preferences/_password_field.html.erb
+++ b/admin/app/views/spree/admin/preferences/_password_field.html.erb
@@ -1,4 +1,4 @@
-<div class="form-group mb-4" data-controller="replace password-visibility">
+<div class="form-group" data-controller="replace password-visibility">
   <% if form.object.persisted? %>
     <div data-replace-target="from">
       <div readonly class="form-control d-flex align-items-center justify-content-between pr-1">
@@ -11,7 +11,7 @@
         </button>
       </div>
     </div>
-    <div class="input-group mb-3 <% if form.object.persisted? %>d-none<% end %>" data-replace-target="to">
+    <div class="input-group <% if form.object.persisted? %>d-none<% end %>" data-replace-target="to">
       <%= password_field form.object, field, class: 'form-control', required: form.object.new_record?, data: { 'enable-button-target': 'input', 'password-visibility-target': 'input' } %>
       <div class="input-group-append">
         <button type="button" class="btn btn-light" data-action="password-visibility#toggle">
