Payment Method Store Credit fixes

--- a/admin/app/views/spree/admin/payment_methods/_form.html.erb
+++ b/admin/app/views/spree/admin/payment_methods/_form.html.erb
@@ -40,7 +40,12 @@
         <% if can?(:manage, Spree::Store) && available_stores.count > 1 %>
           <div class="form-group">
             <%= label_tag :payment_method_stores, Spree.t(:stores) %>
-            <%= collection_select(:payment_method, :store_ids, available_stores, :id, :unique_name, {}, { multiple: true, class: 'select2' }) %>
+            <%= f.collection_check_boxes :store_ids, available_stores, :id, :name do |b| %>
+              <div class="custom-control custom-checkbox mb-1">
+                <%= b.check_box(class: 'custom-control-input') %>
+                <%= b.label(class: 'custom-control-label') %>
+              </div>
+            <% end %>
           </div>
         <% end %>
 
