Payment Methods UI fixes

--- a/admin/app/views/spree/admin/payment_methods/index.html.erb
+++ b/admin/app/views/spree/admin/payment_methods/index.html.erb
@@ -36,3 +36,10 @@
     </table>
   </div>
 <% end %>
+
+<% unless defined?(SpreeGateway) %>
+  <div class="text-muted text-center p-5 d-flex align-items-center justify-content-center">
+    More payment methods can be added by installing
+    <%= external_link_to 'Spree Gateway gem', 'https://github.com/spree-contrib/spree_gateway', class: 'btn btn-link ml-1' %>
+  </div>
+<% end %>
