--- a/core/lib/generators/spree/custom_authentication/templates/authentication_helpers.rb.tt
+++ b/core/lib/generators/spree/custom_authentication/templates/authentication_helpers.rb.tt
@@ -1,21 +1,48 @@
 module Spree
   module AuthenticationHelpers
     def self.included(receiver)
-      receiver.send :helper_method, :spree_login_path
-      receiver.send :helper_method, :spree_signup_path
-      receiver.send :helper_method, :spree_logout_path
+      receiver.helper_method(
+        :spree_current_user,
+        :spree_login_path,
+        :spree_signup_path,
+        :spree_logout_path,
+        :spree_forgot_password_path,
+        :spree_edit_password_path,
+        :spree_admin_login_path,
+        :spree_admin_logout_path,
+      )
     end
 
-    def spree_login_path
-      main_app.login_path
+    def spree_current_user
+      current_user
     end
 
-    def spree_signup_path
-      main_app.signup_path
+    def spree_login_path(opts = {})
+      main_app.login_path(opts)
     end
 
-    def spree_logout_path
-      main_app.logout_path
+    def spree_signup_path(opts = {})
+      main_app.signup_path(opts)
+    end
+
+    def spree_logout_path(opts = {})
+      main_app.logout_path(opts)
+    end
+
+    def spree_forgot_password_path(opts = {})
+      main_app.forgot_password_path(opts)
+    end
+
+    def spree_edit_password_path(opts = {})
+      main_app.edit_password_path(opts)
+    end
+
+    def spree_admin_login_path(opts = {})
+      main_app.admin_login_path(opts)
+    end
+
+    def spree_admin_logout_path(opts = {})
+      main_app.admin_logout_path(opts)
     end
   end
 end
