Admin: small templates cleanup and developer tool links fixes

--- a/admin/app/views/spree/admin/option_types/_form.html.erb
+++ b/admin/app/views/spree/admin/option_types/_form.html.erb
@@ -55,7 +55,7 @@
     <div class="card-body p-0">
       <div class="table-responsive">
         <table class="table table-condensed">
-          <thead data-hook="option_header" class="text-muted border-bottom">
+          <thead class="text-muted border-bottom">
             <tr>
               <th></th>
               <th><%= raw(Spree.t(:presentation) + required_span_tag) %></th>
