--- a/admin/app/views/spree/admin/shipping_methods/index.html.erb
+++ b/admin/app/views/spree/admin/shipping_methods/index.html.erb
@@ -24,13 +24,13 @@
   <div class="table-responsive card-lg p-0">
     <table class="table" id='listing_shipping_methods'>
       <thead class="text-muted">
-        <tr data-hook="admin_shipping_methods_index_headers">
+        <tr>
           <th><%= Spree.t(:name) %></th>
           <th><%= Spree.t(:zone) %></th>
           <th><%= Spree.t(:estimated_delivery_time) %></th>
           <th><%= Spree.t(:amount) %></th>
           <th><%= Spree.t(:visibility) %></th>
-          <th data-hook="admin_shipping_methods_index_header_actions" class="actions"></th>
+          <th class="actions"></th>
         </tr>
       </thead>
       <tbody>
