--- a/admin/app/views/spree/admin/roles/index.html.erb
+++ b/admin/app/views/spree/admin/roles/index.html.erb
@@ -10,14 +10,14 @@
   <div class="table-responsive card-lg p-0">
     <table class="table">
       <thead class="text-muted">
-        <tr data-hook="admin_roles_index_headers">
+        <tr>
           <th><%= Spree.t(:role_id) %></th>
           <th class="actions"></th>
         </tr>
       </thead>
       <tbody>
         <% @roles.each do |role| %>
-          <tr id="<%= spree_dom_id role %>" data-hook="admin_roles_index_rows">
+          <tr id="<%= spree_dom_id role %>">
             <td><%= role.name %></td>
             <td class="actions">
               <%= link_to_edit(role, no_text: true) if can? :edit, role %>
