--- a/admin/app/views/spree/admin/shipping_methods/new.html.erb
+++ b/admin/app/views/spree/admin/shipping_methods/new.html.erb
@@ -3,11 +3,9 @@
   <%= Spree.t(:new_shipping_method) %>
 <% end %>
 
-<div data-hook="admin_shipping_method_new_form_header">
-  <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @shipping_method } %>
-</div>
+<%= render partial: 'spree/admin/shared/error_messages', locals: { target: @shipping_method } %>
 
-<div data-hook="admin_shipping_method_new_form">
+<div>
   <%= form_for [:admin, @shipping_method] do |f| %>
     <%= render 'form', f: f %>
     <%= render 'spree/admin/shared/new_resource_links' %>
