--- a/admin/app/views/spree/admin/zones/_country_members.html.erb
+++ b/admin/app/views/spree/admin/zones/_country_members.html.erb
@@ -1,4 +1,4 @@
-<div id="country_members" data-hook="member">
+<div id="country_members">
   <div class="card mb-4">
     <div class="card-header">
       <h5 class="card-title">
