--- a/admin/app/views/spree/admin/zones/_form.html.erb
+++ b/admin/app/views/spree/admin/zones/_form.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
-  <div class="col-12 col-lg-6" data-hook="admin_zone_form_fields">
+  <div class="col-12 col-lg-6">
     <div class="card mb-4">
       <div class="card-header">
         <h5 class="card-title"><%= Spree.t(:general_settings) %></h5>
       </div>
 
       <div class="card-body">
-        <div class="form-group">  
+        <div class="form-group">
           <%= zone_form.label :name, Spree.t(:name) %>
           <%= zone_form.text_field :name, class: 'form-control' %>
           <%= zone_form.error_message_on :name %>
