--- a/admin/app/views/active_storage/_upload_form.html.erb
+++ b/admin/app/views/active_storage/_upload_form.html.erb
@@ -14,7 +14,7 @@
       data-active-storage-upload-field-name-value="<%= form.object_name %>[<%= field_name %>]"
       data-active-storage-upload-allowed-file-types-value="<%= Rails.application.config.active_storage.web_image_content_types %>"
       class="d-flex flex-column w-100 position-relative">
-    <div class="mb-3 rounded-lg overflow-hidden thumb-preview cursor-pointer"
+    <div class="mb-3 rounded-lg overflow-hidden thumb-preview cursor-pointer bg-light"
          data-action="click->active-storage-upload#open"
     >
       <% if form.object.send(field_name).attached? && form.object.send(field_name).variable? %>
