--- a/admin/app/views/spree/admin/stock_locations/new.html.erb
+++ b/admin/app/views/spree/admin/stock_locations/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :page_title do %>
   <%= page_header_back_button spree.admin_stock_locations_path %>
-  <%= Spree.t('admin.stock_locations.new') %>
+  <%= Spree.t(:new_stock_location) %>
 <% end %>
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @stock_location } %>
 <%= form_for [:admin, @stock_location] do |f| %>
