Set `data-name` to option values in the variants form

--- a/admin/app/views/spree/admin/products/form/_variants.html.erb
+++ b/admin/app/views/spree/admin/products/form/_variants.html.erb
@@ -40,7 +40,7 @@
                   </div>
                   <div data-slot="optionValuesContainer">
                     <% @product.option_values.where(option_type: option_type).pluck(:presentation).uniq.each do |option_value| %>
-                      <span class="badge badge-light" data-slot="optionValueName"><%= option_value %></span>
+                      <span class="badge badge-light" data-slot="optionValueName" data-name="<%= option_value %>"><%= option_value %></span>
                     <% end %>
                   </div>
                 </div>
