Admin: Fixed: use specified form's `object_name` in Preferences password field
This allows this to work with STI models such as payment gateways

--- a/admin/app/views/spree/admin/preferences/_password_field.html.erb
+++ b/admin/app/views/spree/admin/preferences/_password_field.html.erb
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="input-group <% if form.object.persisted? %>d-none<% end %>" data-replace-target="to">
-      <%= password_field form.object, field, class: 'form-control', required: form.object.new_record?, data: { 'enable-button-target': 'input', 'password-visibility-target': 'input' } %>
+      <%= password_field form.object_name, field, class: 'form-control', required: form.object.new_record?, data: { 'enable-button-target': 'input', 'password-visibility-target': 'input' } %>
       <div class="input-group-append">
         <button type="button" class="btn btn-light" data-action="password-visibility#toggle">
           <span data-password-visibility-target="icon"><%= icon 'eye', class: 'mr-0' %></span>
