Fix issues with Stock Transfers in admin: * Product Variant reappears in the search after failing to create a Stock Transfer * Broken validation (moved some to the `Spree::StockTransfer` model) * Product Variants can be added to the Stock Transfer with no destination Stock Location

--- a/admin/app/views/active_storage/_upload_form.html.erb
+++ b/admin/app/views/active_storage/_upload_form.html.erb
@@ -13,7 +13,7 @@
       data-active-storage-upload-auto-submit-value="<%= auto_submit %>"
       data-active-storage-upload-field-name-value="<%= form.object_name %>[<%= field_name %>]"
       data-active-storage-upload-allowed-file-types-value="<%= Rails.application.config.active_storage.web_image_content_types %>"
-      class="d-flex flex-column w-100 position-relative">
+      class="d-flex flex-column justify-content-center w-100 position-relative">
     <div class="mb-3 rounded-lg overflow-hidden thumb-preview cursor-pointer bg-light"
          data-action="click->active-storage-upload#open"
     >
