--- a/admin/app/views/spree/admin/stock_transfers/_new_variant_modal.html.erb
+++ b/admin/app/views/spree/admin/stock_transfers/_new_variant_modal.html.erb
@@ -11,8 +11,8 @@
           <%= form.hidden_field :param_name, value: 'stock_transfer' %>
           <%= form.hidden_field :all, value: true %>
           <%= form.hidden_field :eligible, value: true %>
-          <%= form.hidden_field :omit_ids, value: params[:variants]&.keys&.join(','), data: { stock_transfer_target: :newVariantOmitIds } %>
-          <%= form.hidden_field :stock_location_id, value: params.dig(:stock_transfer, :source_location_id), data: {stock_transfer_target: :newVariantStockLocationId} %>
+          <%= form.hidden_field :omit_ids, value: @variant_omit_ids&.join(',').presence, data: { stock_transfer_target: :newVariantOmitIds } %>
+          <%= form.hidden_field :stock_location_id, value: params.dig(:stock_transfer, :source_location_id), data: { stock_transfer_target: :newVariantStockLocationId } %>
         <% end %>
       </div>
       <div class="modal-body p-0" style="min-height: 200px">
