admin: fix filter icon

--- a/admin/app/views/spree/admin/products/_filters.html.erb
+++ b/admin/app/views/spree/admin/products/_filters.html.erb
@@ -11,7 +11,7 @@
       <%= render 'spree/admin/products/table_filter_dropdown' %>
 
       <button class="btn btn-light h-100" type="button" data-toggle="collapse" data-target="#table-filter" href="#table-filter" aria-expanded="false" aria-controls="table-filter">
-        <%= icon "filter", class: 'mr-1' %>
+        <%= icon "adjustments", class: 'mr-1' %>
         <%= Spree.t('admin.filters') %>
       </button>
     </div>
