--- a/admin/app/views/spree/admin/orders/_customer.html.erb
+++ b/admin/app/views/spree/admin/orders/_customer.html.erb
@@ -9,11 +9,11 @@
         <div class="dropdown-menu dropdown-menu-right" >
           <div data-toggle="modal" data-target="#modal">
             <% if can?(:update_customer, @order) && !@order.user.present? %>
-              <%= link_to Spree.t(:edit_contact_information), spree.edit_admin_order_contact_information_path(@order), class: 'dropdown-item', data: { turbo_frame: 'dialog_modal' } %>
+              <%= link_to Spree.t('admin.edit_contact_information'), spree.edit_admin_order_contact_information_path(@order), class: 'dropdown-item', data: { turbo_frame: 'dialog_modal' } %>
             <% end %>
             <% if can?(:update_addresses, @order) %>
-              <%= link_to Spree.t(:edit_shipping_address), spree.edit_admin_order_shipping_address_path(@order), class: 'dropdown-item', data: { turbo_frame: 'dialog_modal' } if @order.shipping_address.present? %>
-              <%= link_to Spree.t(:edit_billing_address), spree.edit_admin_order_billing_address_path(@order), class: 'dropdown-item', data: { turbo_frame: 'dialog_modal' } if @order.billing_address.present? %>
+              <%= link_to Spree.t('admin.edit_shipping_address'), spree.edit_admin_order_shipping_address_path(@order), class: 'dropdown-item', data: { turbo_frame: 'dialog_modal' } if @order.shipping_address.present? %>
+              <%= link_to Spree.t('admin.edit_billing_address'), spree.edit_admin_order_billing_address_path(@order), class: 'dropdown-item', data: { turbo_frame: 'dialog_modal' } if @order.billing_address.present? %>
             <% end %>
           </div>
           <% if can?(:update_customer, @order) %>
