--- a/admin/app/views/spree/admin/orders/_customer_summary.html.erb
+++ b/admin/app/views/spree/admin/orders/_customer_summary.html.erb
@@ -4,7 +4,7 @@
       <%#= image_tag(avatar_url_for( order.user), width: 24, height: 24, class: 'mr-2 rounded') %>
 
       <% if can?(:manage, order.user) %>
-        <%= link_to order.full_name, [:admin, order.user], class: 'text-dark', data: { 'turbo-frame': '_top' } %>
+        <%= link_to order.full_name, spree.admin_user_path(order.user), class: 'text-dark', data: { 'turbo-frame': '_top' } %>
       <% else %>
         <%= order.full_name %>
       <% end %>
