--- a/admin/app/views/spree/admin/taxonomies/index.html.erb
+++ b/admin/app/views/spree/admin/taxonomies/index.html.erb
@@ -46,8 +46,5 @@
     </table>
   </div>
 <% else %>
-  <div class="text-center w-100 text-muted m-5">
-    <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::Taxonomy)) %>
-    <%= link_to_with_icon 'plus', Spree.t(:add_one), new_object_url, class: 'btn btn-link' if can?(:create, Spree::Taxonomy) %>
-  </div>
+  <%= render 'spree/admin/shared/no_resource_found' %>
 <% end %>
