--- a/admin/app/views/spree/admin/roles/index.html.erb
+++ b/admin/app/views/spree/admin/roles/index.html.erb
@@ -28,8 +28,5 @@
     </table>
   </div>
 <% else %>
-  <div class="alert alert-warning">
-    <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::Role)) %>
-    <%= link_to_with_icon('plus', Spree.t(:add_one), new_object_url, class: 'btn btn-link') if can? :create, Spree::Role %>
-  </div>
+  <%= render 'spree/admin/shared/no_resource_found' %>
 <% end %>
