--- a/admin/app/views/spree/admin/variants/form/_pricing.html.erb
+++ b/admin/app/views/spree/admin/variants/form/_pricing.html.erb
@@ -40,7 +40,7 @@
         <% end %>
       </tbody>
     </table>
-    <div class="card-footer text-center bg-gray-25 text-muted">
+    <div class="card-footer text-center bg-gray-25 text-muted border-top">
       <%= Spree.t('admin.variants.currencies_link', link: spree.edit_admin_store_path(current_store)).html_safe %>
     </div>
   </div>
