--- a/admin/app/views/spree/admin/option_types/_form.html.erb
+++ b/admin/app/views/spree/admin/option_types/_form.html.erb
@@ -72,15 +72,13 @@
             <!-- Inserted elements will be injected before that target. -->
             <tr data-nested-form-target="target"></tr>
 
-            <tr>
-              <td></td>
-              <td colspan="2" class="text-center">
-                <button type="button" data-action="nested-form#add" class="btn btn-link" id="add_option_value_button">
+            <tr class="hover-none">
+              <td colspan="4" class="text-center p-1">
+                <button type="button" data-action="nested-form#add" class="btn btn-link py-3 w-100" id="add_option_value_button">
                   <%= icon('plus') %>
                   <%= Spree.t(:add_one) %>
                 </button>
               </td>
-              <td></td>
             </tr>
           </tbody>
         </table>
