--- a/admin/app/views/spree/admin/orders/_filters.html.erb
+++ b/admin/app/views/spree/admin/orders/_filters.html.erb
@@ -3,9 +3,9 @@
     <div class="filter-wrap border-bottom">
       <div class="d-flex flex-column flex-lg-row">
         <div class="flex-grow-1 mr-lg-2 mb-3 mb-lg-0">
-          <div class="form-control d-flex align-items-center py-0  focus-shadow-blue focus-border-blue shadow-xs">
+          <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
             <%= icon 'search', class: 'mr-3 text-muted' %>
-            <%= text_field_tag 'q[multisearch]', params.dig(:q, :multisearch), class: "form-control-plaintext js-quick-search px-0", placeholder: 'Search orders' %>
+            <%= search_field_tag 'q[multisearch]', params.dig(:q, :multisearch), class: "form-control-plaintext js-quick-search px-0", placeholder: 'Search orders' %>
           </div>
         </div>
 
