--- a/admin/app/views/spree/admin/products/form/_base.html.erb
+++ b/admin/app/views/spree/admin/products/form/_base.html.erb
@@ -8,7 +8,7 @@
 
     <div class="form-group mb-0">
       <%= f.label :description, Spree.t(:description) %>
-      <div class="border rounded border-gray-200 mb-0">
+      <div class="border rounded mb-0">
         <%= f.text_area :description, { rows: 10, class: "form-control spree-rte", data: { seo_form_target: 'sourceDescriptionInput' } } %>
       </div>
     </div>
