--- a/admin/app/views/spree/admin/stock_transfers/index.html.erb
+++ b/admin/app/views/spree/admin/stock_transfers/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title do %>
-  <%= Spree.t(:stock_transfers) %>
+  <%= Spree.t(:stock) %>
 <% end %>
 <% content_for :page_tabs do %>
   <%= render 'spree/admin/shared/stock_nav' %>
