--- a/admin/app/views/spree/admin/taxons/_form.html.erb
+++ b/admin/app/views/spree/admin/taxons/_form.html.erb
@@ -78,13 +78,13 @@
         </div>
 
         <div class="card-body border-bottom">
-          <div class="form-inline">
-            <%= f.label :sort_order %>
-            <%= f.select :sort_order, taxon_sort_options_for_select, {}, { class: 'custom-select custom-select-sm ml-lg-3',  data: { action: 'change->auto-submit#submitForm' } } %>
+          <div class="d-flex align-items-center">
+            <%= f.label :sort_order, class: 'text-nowrap mr-2 mb-0' %>
+            <%= f.select :sort_order, taxon_sort_options_for_select, {}, { class: 'custom-select custom-select-sm w-auto',  data: { action: 'change->auto-submit#submitForm' } } %>
           </div>
         </div>
 
-        <div class="card-body p-0" style="min-height: 300px">
+        <div class="card-body p-2" style="min-height: 300px">
           <div class="d-block overflow-y-auto overflow-x-hidden" style="max-height: 300px">
             <%= turbo_frame_tag :classifications, src: spree.admin_taxon_classifications_path(@taxon.id), loading: :lazy do %>
               <%= render 'shared/spinner' %>
