--- a/admin/app/views/spree/admin/shipping_methods/_form.html.erb
+++ b/admin/app/views/spree/admin/shipping_methods/_form.html.erb
@@ -10,7 +10,7 @@
               <%= f.error_message_on :name %>
             </div>
 
-            <p class="form-text text-muted small">
+            <p class="form-text text-muted small mt-2">
               This will be displayed to customers.
             </p>
           </div>
@@ -38,7 +38,7 @@
           <%= f.error_message_on :tracking_url %>
         </div>
 
-        <p class="form-text text-muted small">
+        <p class="form-text text-muted small mt-2">
           <code>:tracking</code>
           <span>will be replaced with the tracking number.</span>
         </p>
