--- a/admin/app/views/spree/admin/taxons/edit.html.erb
+++ b/admin/app/views/spree/admin/taxons/edit.html.erb
@@ -13,7 +13,7 @@
 
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @taxon } %>
 
-<%= form_for @taxon, as: :taxon, method: :put, url: form_url, html: { multipart: true }, data: { auto_submit_target: 'form', controller: 'auto-submit' } do |f| %>
+<%= form_for @taxon, as: :taxon, method: :put, url: form_url, html: { multipart: true }, data: { controller: 'auto-submit' } do |f| %>
   <%= render 'form', f: f %>
   <%= render 'spree/admin/shared/edit_resource_links', f: f %>
 <% end %>
