--- a/admin/app/views/spree/admin/orders/user/new.html.erb
+++ b/admin/app/views/spree/admin/orders/user/new.html.erb
@@ -18,9 +18,9 @@
       <% end %>
     <% else %>
       <div class="d-flex gap-2 flex-column">
-        <%= form_with url: spree.admin_order_user_path(@order), data: {  controller: 'form', form_target: 'form' }, method: :patch do  %>
+        <%= form_with url: spree.admin_order_user_path(@order), data: {  controller: 'auto-submit' }, method: :patch do  %>
           <%= label_tag :user_id, Spree.t(:select_user), class: "sr-only" %>
-          <%= tom_select_tag :user_id, { include_blank: Spree.t(:select_user), options: users_for_select_options, select_data: {action: 'form#submit'}, disable_with: "<span class='spinner-border spinner-border-sm' role='status'></span>" } %>
+          <%= tom_select_tag :user_id, { include_blank: Spree.t(:select_user), options: users_for_select_options, select_data: {action: 'auto-submit#submit'}, disable_with: "<span class='spinner-border spinner-border-sm' role='status'></span>" } %>
         <% end %>
         <span class="d-flex w-100 justify-content-center align-items-center"><%= Spree.t(:or) %></span>
         <%= link_to Spree.t(:create_new), spree.new_admin_order_user_path(@order, show_form: true), class: "btn btn-light w-100" %>
