--- a/admin/app/views/spree/admin/products/_filters.html.erb
+++ b/admin/app/views/spree/admin/products/_filters.html.erb
@@ -1,4 +1,4 @@
-<div class="filter-wrap border-bottom">
+<div class="filter-wrap">
   <div class="d-flex flex-column flex-lg-row">
     <%= form_tag request.fullpath, id: "quick-search", class: 'flex-grow-1 mr-lg-2 mb-3 mb-lg-0', method: :get do %>
       <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
