--- a/admin/app/views/spree/admin/option_types/_form.html.erb
+++ b/admin/app/views/spree/admin/option_types/_form.html.erb
@@ -55,7 +55,7 @@
     <div class="card-body p-0">
       <div class="table-responsive">
         <table class="table table-condensed">
-          <thead class="text-muted border-bottom">
+          <thead>
             <tr>
               <th></th>
               <th><%= raw(Spree.t(:presentation) + required_span_tag) %></th>
@@ -73,7 +73,7 @@
             <tr data-nested-form-target="target"></tr>
 
             <tr class="hover-none">
-              <td colspan="4" class="text-center p-1">
+              <td colspan="4" class="text-center p-2">
                 <button type="button" data-action="nested-form#add" class="btn btn-link py-3 w-100" id="add_option_value_button">
                   <%= icon('plus') %>
                   <%= Spree.t(:add_one) %>
